--- a/css/myVideo.css
+++ b/css/myVideo.css
@@ -1,3 +1,7 @@
+*, html   {
+     Box-sizing: Border-box ;
+}
+
 .header-container {
     width: 100%;
     height: 650px;
@@ -26,4 +30,18 @@ video {
 }
 .navbar {
     margin:0;
+}
+
+.Aligner {
+ position: absolute;
+ top:40%;
+ left:25%;
+ width:60%;
+
+}
+
+
+
+.header-container {
+    position:relative;
 }
