--- a/css/myVideo.css
+++ b/css/myVideo.css
@@ -18,6 +18,7 @@
     height: 100%;
     width:100%;
     overflow:hidden;
+    margin-bottom:0;
 
 }
 
@@ -45,3 +46,4 @@ video {
 .header-container {
     position:relative;
 }
+
