--- a/css/myVideo.css
+++ b/css/myVideo.css
@@ -1,49 +1,48 @@
-/**, html   {
-     Box-sizing: Border-box ;
-}
-*/
-.header-container {
-    width: 100%;
-    height: 650px;
-    border-left: none;
-    border-right:none;
-    position: relative;
-    padding:20px;
+.quote {
+    margin:22% 0 0 0;
+   color:grey;
+   
 }
 
-.video-container {
-    position:absolute;
-    top:0%;
-    left:0%;
-    height: 100%;
-    width:100%;
-    overflow:hidden;
-    margin-bottom:0;
-
-}
-
-video {
-    position:absolute;
-    z-index: -1;
-    opacity: .78;
-    width: 100%;
-
-}
 .navbar {
     margin:0;
 }
 
-.Aligner {
- position: absolute;
- top:40%;
- left:25%;
- width:60%;
 
+
+.white {
+    color:white;
 }
 
 
+  
+  #video {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+/*     margin-bottom: 0; */
 
-.header-container {
-    position:relative;
 }
 
+.outer {
+  position: relative;
+  height: 100vh;
+}
+.jumbotron {
+  background: rgba(0,0,0,0.0);
+  width: 50vw;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -125px;
+  margin-left: -25vw;
+  color: #fff;
+  border-radius: 50%;
+}
+.marketing {
+  margin-top: 50px;
+}
